--- a/email_templete_biolerplate.html
+++ b/email_templete_biolerplate.html
@@ -271,56 +271,126 @@
                 font-size: 16px;
               "
             >
-              <h1 style="font-size: 25px">Forgot your password</h1>
-              <h2 style="font-size: 20px">No problem!</h2>
+              <h1 style="font-size: 25px">
+                We build software so you can build your business
+              </h1>
               <p style="font-size: 16px; line-height: 20px">Hi, From enxsys</p>
               <p style="font-size: 16px; line-height: 20px">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
-                eius?
+                We aim to build stellar software and taking your business into
+                the realms of digitalization.
               </p>
             </td>
           </tr>
           <tr>
-            <td style="padding: 10px 0 30px 0; text-align: center">
-              <a href="https://www.enxsys.com/">
-                <img
-                  src="https://fastly.picsum.photos/id/668/4133/2745.jpg?hmac=n2-nIVXnrSE_pCjAmI-nlhBicoySz1xq-KUFMr9ERrM"
-                  width="160"
-                />
-                <p>
-                  Lorem ipsum luptas ut officia repudiandae asperiores facere
-                  omnis!
-                </p>
-              </a>
+            <td style="vertical-align: top; text-align: center">
+              <table
+                width="260"
+                style="
+                  width: 100%;
+                  max-width: 160px;
+                  vertical-align: top;
+                  display: inline-block;
+                "
+              >
+                <tr>
+                  <td style="padding: 10px 0 30px 0; text-align: center">
+                    <a href="https://www.enxsys.com/">
+                      <img
+                        src="https://fastly.picsum.photos/id/816/5000/3333.jpg?hmac=_6tgFk0XUBO6-wQJnifC-Abqh5W_hu-4lPGN_2d8Sn4"
+                        width="160"
+                      />
+                      <h2 style="font-size: 16px">App dev</h2>
+                      <p>Get your fav app for your business</p>
+                    </a>
+                  </td>
+                </tr>
+              </table>
+              <table
+                width="100%"
+                style="
+                  width: 100%;
+                  max-width: 160px;
+                  vertical-align: top;
+                  display: inline-block;
+                "
+              >
+                <tr>
+                  <td style="padding: 10px 0 30px 0; text-align: center">
+                    <a href="https://www.enxsys.com/">
+                      <img
+                        src="https://fastly.picsum.photos/id/668/4133/2745.jpg?hmac=n2-nIVXnrSE_pCjAmI-nlhBicoySz1xq-KUFMr9ERrM"
+                        width="160"
+                      />
+                      <h2 style="font-size: 16px">Web dev</h2>
+                      <p>Get your fav Website for your business</p>
+                    </a>
+                  </td>
+                </tr>
+              </table>
+              <table
+                width="100%"
+                style="
+                  width: 100%;
+                  max-width: 160px;
+                  vertical-align: top;
+                  display: inline-block;
+                "
+              >
+                <tr>
+                  <td style="padding: 10px 0 30px 0; text-align: center">
+                    <a href="https://www.enxsys.com/">
+                      <img
+                        src="https://fastly.picsum.photos/id/885/4000/2667.jpg?hmac=IrjRbqugGjfrXfEv6t65cpdv8j6EFpGT7ZOJipcgHJc"
+                        width="160"
+                      />
+                      <h2 style="font-size: 16px">DevOps</h2>
+                      <p>let your work automate</p>
+                    </a>
+                  </td>
+                </tr>
+              </table>
+              <table
+                style="text-align: center; max-width: 600px"
+                align="center"
+              >
+                <tr style="width: 100%; text-align: center" width="300">
+                  <td style="width: 100%; text-align: center">
+                    <a href="https://www.enxsys.com">
+                      <button
+                        style="
+                          width: 200px;
+                          height: 30px;
+                          background-color: #0950a8;
+                          color: #fff;
+                          border: 0;
+                        "
+                      >
+                        Get a Quote
+                      </button>
+                    </a>
+                  </td>
+                </tr>
+              </table>
+              <hr style="border: 2px solid #0950a8" />
             </td>
           </tr>
-          <tr>
-            <td style="padding: 10px 0 30px 0; text-align: center">
-              <a href="https://www.enxsys.com/">
-                <button
-                  style="height: 40px; background-color: #0950a8; border: 0"
-                >
-                  Press to reset password
-                </button>
-              </a>
-            </td>
-          </tr>
+
           <tr>
             <td
               style="
                 padding: 20px 0 30px 0;
                 text-align: center;
-                background-color: #d5f3f4;
+                background-color: #0950a8;
               "
             >
               <a href="https://example2.com">
-                <p style="font-size: 16px; color: #000">info@enxsys.com</p>
+                <p style="font-size: 16px; color: #fff">info@enxsys.com</p>
               </a>
               <a href="https://example2.com">
-                <p style="font-size: 16px; color: #000">www.enxsys.com</p>
+                <p style="font-size: 16px; color: #fff">www.enxsys.com</p>
               </a>
               <a href="https://example2.com">
-                <p style="font-size: 16px; color: #000">+9324043211</p>
+                <p style="font-size: 16px; color: #fff">+9324043211</p>
               </a>
             </td>
           </tr>
